--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <h3>Mes chaînes</h3>
         <a href=""><img src="images/Jack.png" alt=""><p>Obed Mulumba</p></a>
         <a href=""><img src="images/simon.png" alt=""><p>Cleverprogra...</p></a>
-        <a href=""><img src="images/tom.png" alt=""><p>Sonny Sangha</p></a>
+        <a href=""><img src="images/sonny.jpg" alt=""><p>Sonny Sangha</p></a>
         <a href=""><img src="images/megan.png" alt=""><p>Nord Coders</p></a>
         <a href=""><img src="images/cameron.png" alt=""><p>Grafik'art</p></a>
     </div>
@@ -98,12 +98,12 @@
                 <div class="vid-info">
                     <a href="">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur.</a>
                     <p><strong>Moïse Mbiye Officiel</strong></p>
-                     <p>15k Vues &bull; 2 jours</p>
+                     <p>499k Vues &bull; 2 jours</p>
                 </div>
             </div>
         </div>
         <div class="vid-list">
-            <a href=""><img src="images/thumbnail5.png" class="thumbnail" alt=""></a>            
+            <a href=""><img src="images/thumbnail5.jpg" class="thumbnail" alt=""></a>            
             <div class="flex-div">
                 <img src="images/Jack.png" alt="">
                 <div class="vid-info">
@@ -114,7 +114,7 @@
             </div>
         </div>
         <div class="vid-list">
-            <a href=""><img src="images/thumbnail6.png" class="thumbnail" alt=""></a>            
+            <a href=""><img src="images/thumbnail6.jpg" class="thumbnail" alt=""></a>            
             <div class="flex-div">
                 <img src="images/Jack.png" alt="">
                 <div class="vid-info">
@@ -125,9 +125,9 @@
             </div>
         </div>
         <div class="vid-list">
-            <a href=""><img src="images/thumbnail7.png" class="thumbnail" alt=""></a>            
+            <a href=""><img src="images/thumbnail7.jpg" class="thumbnail" alt=""></a>            
             <div class="flex-div">
-                <img src="images/Jack.png" alt="">
+                <img src="images/cr7.jpg" alt="">
                 <div class="vid-info">
                     <a href="">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur.</a>
                     <p><strong>OMM Development</strong></p>
@@ -136,7 +136,7 @@
             </div>
         </div>
         <div class="vid-list">
-            <a href=""><img src="images/thumbnail8.png" class="thumbnail" alt=""></a>            
+            <a href=""><img src="images/thumbnail8.jpg" class="thumbnail" alt=""></a>            
             <div class="flex-div">
                 <img src="images/Jack.png" alt="">
                 <div class="vid-info">
