--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <div class="vid-list">
             <a href=""><img src="images/thumbnail6.jpg" class="thumbnail" alt=""></a>            
             <div class="flex-div">
-                <img src="images/Jack.png" alt="">
+                <img src="images/messi.jpg" alt="">
                 <div class="vid-info">
                     <a href="">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur.</a>
                     <p><strong>OMM Development</strong></p>
@@ -138,7 +138,7 @@
         <div class="vid-list">
             <a href=""><img src="images/thumbnail8.jpg" class="thumbnail" alt=""></a>            
             <div class="flex-div">
-                <img src="images/Jack.png" alt="">
+                <img src="images/cr7.jpg" alt="">
                 <div class="vid-info">
                     <a href="">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur.</a>
                     <p><strong>OMM Development</strong></p>
