--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div class="vid-list">
             <a href=""><img src="images/thumbnail5.jpg" class="thumbnail" alt=""></a>            
             <div class="flex-div">
-                <img src="images/Jack.png" alt="">
+                <img src="images/messi.jpg" alt="">
                 <div class="vid-info">
                     <a href="">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur.</a>
                     <p><strong>OMM Development</strong></p>
