update videos foot

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div class="vid-list">
             <a href=""><img src="images/thumbnail4.jpg" class="thumbnail" alt=""></a>            
             <div class="flex-div">
-                <img src="images/Jack.png" alt="">
+                <img src="images/marcello.jpg" alt="">
                 <div class="vid-info">
                     <a href="">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur.</a>
                     <p><strong>Moïse Mbiye Officiel</strong></p>
