--- a/index.html
+++ b/index.html
@@ -65,18 +65,18 @@
                 <div class="vid-info">
                     <a href="play-video.html">Le Role de l'éducation dans la transformation digitale</a>
                     <p><strong>La Porte Des Cieux</strong></p>
-                    <p>2G Vues &bull; 2 Jours</p>
+                    <p>87 K abonnés &bull; 2 Jours</p>
                 </div>
             </div>
         </div>
         <div class="vid-list">
             <a href=""><img src="images/thumbnail2.jpg" class="thumbnail" alt="" style="border:1px solid #dcdcdc;"></a>            
             <div class="flex-div">
-                <img src="images/Jack.png" alt="">
+                <img src="images/cameron.png" alt="">
                 <div class="vid-info">
-                    <a href="">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur.</a>
-                    <p><strong>Fally IPUPA Officiel</strong></p>
-                     <p>15k Vues &bull; 2 jours</p>
+                    <a href="">TOKOOOS II, Nouvelle Album Disponible avec  Dadju, Ninho, Naza, M. Pokora.</a>
+                    <p><strong>Fally Ipupa</strong></p>
+                     <p>2,5 M Abonnés &bull; 2 jours</p>
                 </div>
             </div>
         </div>
@@ -87,7 +87,7 @@
                 <div class="vid-info">
                     <a href="">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur.</a>
                     <p><strong>Moïse Mbiye Officiel</strong></p>
-                     <p>15k Vues &bull; 2 jours</p>
+                     <p>499 K Abonnés &bull; 2 jours</p>
                 </div>
             </div>
         </div>
@@ -97,8 +97,8 @@
                 <img src="images/marcello.jpg" alt="">
                 <div class="vid-info">
                     <a href="">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur.</a>
-                    <p><strong>Moïse Mbiye Officiel</strong></p>
-                     <p>499k Vues &bull; 2 jours</p>
+                    <p><strong>COMPASSION TV</strong></p>
+                     <p>788 K Abonnés &bull; 2 jours</p>
                 </div>
             </div>
         </div>
