--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <div class="vid-info">
                     <a href="">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur.</a>
                     <p><strong>OMM Development</strong></p>
-                     <p>15k Vues &bull; 2 jours</p>
+                     <p>1,94 M abonnés &bull; 2 jours</p>
                 </div>
             </div>
         </div>
@@ -142,7 +142,7 @@
                 <div class="vid-info">
                     <a href="">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur.</a>
                     <p><strong>OMM Development</strong></p>
-                     <p>15k Vues &bull; 2 jours</p>
+                     <p>1,94 M abonnés &bull; 2 jours</p>
                 </div>
             </div>
         </div>
