--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
         <div class="vid-list">
             <a href="play-video.html"><img src="images/thumbnail1.jpg" class="thumbnail" alt=""></a>            
             <div class="flex-div">
-                <img src="images/jft.jpg" alt="">
+                <img src="images/jft_profile.jpg" alt="">
                 <div class="vid-info">
                     <a href="play-video.html">Le Role de l'éducation dans la transformation digitale</a>
-                    <p><strong>La Porte Des Cieux</strong></p>
+                    <p><strong>Joel Francis Tatu TV</strong></p>
                     <p>87 K abonnés &bull; 2 Jours</p>
                 </div>
             </div>
