--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <a href=""><img src="images/simon.png" alt=""><p>Cleverprogra...</p></a>
         <a href=""><img src="images/sonny.jpg" alt=""><p>Sonny Sangha</p></a>
         <a href=""><img src="images/megan.png" alt=""><p>Nord Coders</p></a>
-        <a href=""><img src="images/cameron.png" alt=""><p>Grafik'art</p></a>
+        <a href=""><img src="images/grafikart.jpg" alt=""><p>Grafik'art</p></a>
     </div>
 </div>
 
