--- a/play-video.html
+++ b/play-video.html
@@ -139,7 +139,7 @@
                 </div>
             </div>
             <div class="side-video-list">
-                <a href="" class="small-thumbnail"><img src="images/thumbnail5.png" alt=""></a>
+                <a href="" class="small-thumbnail"><img src="images/thumbnail5.jpg" alt=""></a>
                 <div class="vid-info">
                     <a href="">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur.</a>
                     <p>OMM Development</p>
@@ -147,7 +147,7 @@
                 </div>
             </div>
             <div class="side-video-list">
-                <a href="" class="small-thumbnail"><img src="images/thumbnail6.png" alt=""></a>
+                <a href="" class="small-thumbnail"><img src="images/thumbnail6.jpg" alt=""></a>
                 <div class="vid-info">
                     <a href="">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur.</a>
                     <p>OMM Development</p>
@@ -155,7 +155,7 @@
                 </div>
             </div>
             <div class="side-video-list">
-                <a href="" class="small-thumbnail"><img src="images/thumbnail7.png" alt=""></a>
+                <a href="" class="small-thumbnail"><img src="images/thumbnail7.jpg" alt=""></a>
                 <div class="vid-info">
                     <a href="">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur.</a>
                     <p>OMM Development</p>
@@ -163,21 +163,14 @@
                 </div>
             </div>
             <div class="side-video-list">
-                <a href="" class="small-thumbnail"><img src="images/thumbnail8.png" alt=""></a>
+                <a href="" class="small-thumbnail"><img src="images/thumbnail8.jpg" alt=""></a>
                 <div class="vid-info">
                     <a href="">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur.</a>
                     <p>OMM Development</p>
                     <p>15k Vues</p>
                 </div>
             </div>
-            <div class="side-video-list">
-                <a href="" class="small-thumbnail"><img src="images/thumbnail9.png" alt=""></a>
-                <div class="vid-info">
-                    <a href="">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur.</a>
-                    <p>OMM Development</p>
-                    <p>15k Vues</p>
-                </div>
-            </div>
+
 
 
         </div>
