--- a/play-video.html
+++ b/play-video.html
@@ -32,12 +32,12 @@
     <div class="row">
         <div class="play-video">
             <video controls autoplay>
-                <source src="images/video.mp4" type="video/mp4">
+                <source src="images/5sec.mp4" type="video/mp4">
             </video>
             <div class="tags">
                 <a href="">#Coding</a> <a href="">#HTML</a> <a href="">#CSS</a><a href="">#JAVASCRIPT</a>
             </div>
-            <h3>Best YouTube channel To Learn Web Development</h3>
+            <h3>Une chaîne qui permet de visionner des vidéos de tout genres</h3>
             <div class="play-video-info">
                 <p>1225 Vues &bull; 2 days ago</p>
                 <div>
