--- a/play-video.html
+++ b/play-video.html
@@ -52,7 +52,7 @@
                 <img src="images/Jack.png" alt="">
                 <div>
                     <p>OMM Development</p>
-                    <span>500k Subscribers</span>
+                    <span>500k Abonnés</span>
                 </div>
                 <button type="button">Subscribe</button>
             </div>
@@ -69,7 +69,7 @@
                 <div class="old-comment">
                     <img src="images/Jack.png" alt="">
                     <div>
-                        <h3>Obed Mulumba <span>2 days ago</span></h3>
+                        <h3>Obed Mulumba <span>now</span></h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ullam provident officiis earum cupiditate hic aspernatur quod enim labore modi, consectetur mollitia fuga nulla in impedit natus alias iusto nemo!</p>
                         <div class="acomment-action">
                             <img src="images/like.png" alt="">
